--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "firebase": "^10.12.1",
+    "firestore": "^1.1.6",
+    "leaflet": "^1.9.4",
+    "mysql2": "^3.9.7",
+    "preline": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
