--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@preline/overlay": "^2.3.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.12.1",
