--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "preline": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11"
   },
